Bugfix: taxonomies div was not responsive, and bad formatting

--- a/css/style.scss
+++ b/css/style.scss
@@ -70,14 +70,11 @@ ul.Tag li a
 	display:block;
 	padding:5px;
 	text-decoration:none;
-	font-size:0.7em;
+	font-size:10px;
 	margin:0px;
 }
 
-#commentform
-{
-	font-size:10px;
-}
+
 #comments
 {
 	float:left;
@@ -89,6 +86,7 @@ ul.Tag li a
 	display:inline-block;
 	width:20%;
 }
+
 .tax_list
 {
 	display:inline-block;
@@ -152,11 +150,7 @@ html
 				{
 					width:calc((100% / 5) - 10px);
 				}
-				main#single_photoalbum .Thumbnail
-				{
-					width:calc((100% / 5) - 10px);
-				}
-				div.Related
+				div.related_posts
 				{
 					width:calc((100% / 5) - 10px);
 				}
