--- a/css/tablet.scss
+++ b/css/tablet.scss
@@ -88,6 +88,17 @@ ul.MainMenu
 	display:inline-block;
 	width:47%;
 }
+
+.tax_lable
+{
+	width:30%;
+}
+
+.tax_list
+{
+	width:70%;
+}
+
 html
 {
 	body
